# GhostPayroll

./: .claude  .gitignore  Anchor.toml  Cargo.lock.bak  next.config.mjs  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/company/: page.tsx
app/company/employees/: page.tsx
app/company/payments/: page.tsx
app/components/: WalletButton.tsx  WalletContextProvider.tsx
app/hooks/: useGhostPayroll.ts
app/lib/anchor/: client.ts  instructions.ts  pdas.ts
programs/ghost-payroll/: Cargo.toml
programs/ghost-payroll/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/ghost-payroll/src/instructions/: add_employee.rs  initialize_company.rs  mod.rs  process_payment.rs  record_payment_proof.rs  remove_employee.rs  update_employee_salary.rs
tests/: ghost-payroll.js  ghost-payroll.ts
