[package]
name = "ghost-payroll"
version = "0.1.0"
description = "Ghost Payroll - Privacy-preserving payroll system on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghost_payroll"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token"] }
blake3 = "=1.8.2"
